# TestIQ

./: .gitignore  .gitignore_reports  .testiq.toml.example  .testiq.yaml.example  LICENSE  Makefile  README.md  final_report_with_defs.html  pyproject.toml  responsive_report.html  testiq-demo-report.html
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  PRODUCTION_READINESS.md  README.md  SECURITY.md  api.md  cli-reference.md  configuration.md  enterprise-features.md  faq.md  final-optimization-summary.md  guide.md  installation.md  integration.md  interpreting-results.md  manual-testing.md  pytest-integration.md  test-consolidation-summary.md
examples/: README.md  sample_coverage.json
examples/ai-generated-tests/: calculator.py  coverage.json
examples/bash/: quick_test.sh
examples/cicd/: Jenkinsfile  github-actions.yml  gitlab-ci.yml
examples/python/: manual_test.py  pytest_plugin_example.py
reports/: .gitkeep  README.md  quality_assessment_report.txt  quality_score.txt  sample_report.html  test_report.csv  test_report.html  test_report.md
src/testiq/: __init__.py  analysis.py  analyzer.py  cicd.py  cli.py  config.py  pytest_plugin.py  reporting.py  reporting.py.backup
src/testiq/examples/python/: manual_test.py
tests/: conftest.py  test_analysis.py  test_analyzer.py  test_cicd.py  test_cli.py  test_coverage_converter.py  test_enterprise.py  test_init.py  test_performance.py  test_plugins.py  test_reporting.py  test_security.py  test_source_reader.py
tests/cov_checks/: run_complete_analysis.sh  verify_tracing.py
