[project]
name = "testiq"
version = "0.1.0"
description = "Intelligent test analysis - Find duplicate and redundant tests using coverage analysis"
readme = "README.md"
authors = [
    { name = "Kiran K Kotari", email = "kirankotari@live.com" }
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.7",
    "coverage>=7.4.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "tomli>=2.0.1; python_version < '3.11'",
]
keywords = ["testing", "test-automation", "coverage", "duplicate-detection", "test-quality", "ci-cd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/testiq-dev/testiq"
Documentation = "https://github.com/testiq-dev/testiq/tree/main/docs"
Repository = "https://github.com/testiq-dev/testiq"
Issues = "https://github.com/testiq-dev/testiq/issues"

[project.scripts]
testiq = "testiq.cli:main"

[project.entry-points.pytest11]
testiq = "testiq.pytest_plugin"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=testiq --cov-report=term-missing --cov-report=html"
